--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=Tenants_Managment
 server.port=8080
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/tenants_managment
+spring.datasource.url=jdbc:postgresql://postgres:5432/tenants_managment
 spring.datasource.username=postgres
 spring.datasource.password=abc123.
 spring.datasource.driver-class-name=org.postgresql.Driver
