--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=Tenants_Managment
 server.port=8080
 # Postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/tenants_managment
+spring.datasource.url=jdbc:postgresql://postgres:5432/tenants_managment
 spring.datasource.username=postgres
 spring.datasource.password=abc123.
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -12,8 +12,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 # Redis
-spring.redis.host=localhost
-spring.redis.port=6379
+spring.data.redis.host=redis
+spring.data.redis.port=6379
 
 # Swagger openapi
 springdoc.openapi.ui.config.doc-expansion=none
