refactorizacion del gitlab ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,8 @@ stages:
 variables:
   SERVICE_NAME: spvending-manager
   DOCKER_COMPOSE_FILE: docker-compose.yml
+  DOCKER_EXEC: "C:\Program Files\Docker\Docker\resources\bin\docker.exe"
+  DOCKER_COMPOSE_EXEC: "C:\Program Files\Docker\Docker\resources\bin\docker-compose.exe"
 build_image:
   stage: build
   tags:
@@ -11,7 +13,7 @@ build_image:
     - docker-compose
   script:
     - echo "Iniciando etapa de Construccion..."
-    - docker build -t $SERVICE_NAME:$CI_COMMIT_SHORT_SHA .
+    - "$DOCKER_EXEC build -t $SERVICE_NAME:$CI_COMMIT_SHORT_SHA ."
     - echo "Imagen construida:$SERVICE_NAME:$CI_COMMIT_SHORT_SHA"
 deploy_production:
   stage: deploy
@@ -20,8 +22,8 @@ deploy_production:
     - docker-compose
   script:
     - echo "Iniciando etapa de Despliegue con Docker Compose..."
-    - docker-compose -f $DOCKER_COMPOSE_FILE pull
-    - docker-compose -f $DOCKER_COMPOSE_FILE up -d --force-recreate
+    - "$DOCKER_COMPOSE_EXEC -f $DOCKER_COMPOSE_FILE pull"
+    - "$DOCKER_COMPOSE_EXEC -f $DOCKER_COMPOSE_FILE up -d --force-recreate"
     - echo "Despliegue completado."
 
   only:
