--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,12 @@
+variables:
+  SERVICE_NAME: spvending-manager
+  IMAGE_TAG: $SERVICE_NAME:$CI_COMMIT_SHORT_SHA
+  DOCKER_COMPOSE_FILE: docker-compose.yml
+
 stages:
   - build
   - deploy
-variables:
-  SERVICE_NAME: spvending-manager
-  DOCKER_COMPOSE_FILE: docker-compose.yml
-  DOCKER_EXEC: "C:\\Program Files\\Docker\\Docker\\resources\\bin\\docker.exe"
-  DOCKER_COMPOSE_EXEC: "C:\\Program Files\\Docker\\Docker\\resources\\bin\\docker-compose.exe"
+
 build_image:
   stage: build
   tags:
@@ -13,8 +14,9 @@ build_image:
     - docker-compose
   script:
     - echo "Iniciando etapa de Construccion..."
-    - "$DOCKER_EXEC" build -t $SERVICE_NAME:$CI_COMMIT_SHORT_SHA .
-    - echo "Imagen construida:$SERVICE_NAME:$CI_COMMIT_SHORT_SHA"
+    - docker build -t $IMAGE_TAG .
+    - echo "Imagen construida:$IMAGE_TAG"
+
 deploy_production:
   stage: deploy
   tags:
@@ -22,8 +24,8 @@ deploy_production:
     - docker-compose
   script:
     - echo "Iniciando etapa de Despliegue con Docker Compose..."
-    - "$DOCKER_COMPOSE_EXEC" -f $DOCKER_COMPOSE_FILE pull
-    - "$DOCKER_COMPOSE_EXEC" -f $DOCKER_COMPOSE_FILE up -d --force-recreate
+    - docker-compose -f $DOCKER_COMPOSE_FILE pull
+    - docker-compose -f $DOCKER_COMPOSE_FILE up -d --force-recreate
     - echo "Despliegue completado."
 
   only:
