--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,6 +20,8 @@ before_script:
 
 build:
   stage: build
+  tags:
+    - build
   image: maven:3.9-eclipse-temurin-21
   script:
     - mvn clean package -DskipTests
@@ -29,6 +31,8 @@ build:
 
 deploy:
   stage: deploy
+  tags:
+    - deploy
   image: docker:latest
   services:
     - docker:dind
