--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,6 +25,8 @@ build:
   image: maven:3.9-eclipse-temurin-22
   script:
     - mvn clean package -DskipTests
+    - chown -R $(whoami):$(whoami) target/
+    - chmod -R u+rw target/
     - ls -l target/
   artifacts:
     paths:
