--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,4 @@
 image: docker:latest
-
 services:
   - docker:dind
 
@@ -15,6 +14,8 @@ stages:
 build-app:
   image: maven:3.8.3-openjdk-17
   stage: build
+  tags:
+    - build
   script:
     - mvn clean package -DskipTests
   artifacts:
@@ -24,6 +25,8 @@ build-app:
 # 3. Construir la imagen Docker localmente
 docker-build:
   stage: dockerized
+  tags:
+    - docker
   script:
     - docker build -t spvending-api-image .
     - docker images
@@ -31,6 +34,8 @@ docker-build:
 # 4. Despliegue local usando Docker Compose
 deploy-local:
   stage: deploy
+  tags:
+    - deploy
   script:
     - docker-compose down || true
     - docker-compose up -d --build
