--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ stages:
 
 # 1. Compilar la aplicación
 build-app:
-  image: maven:3.8.3-openjdk-22
+  image: eclipse-temurin:22-jdk
   stage: build
   tags:
     - build
