--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ build:
   stage: build
   tags:
     - build
-  image: maven:3.8.3-openjdk-22
+  image: maven:eclipse-temurin:22-jdk
   script:
     - mvn clean package -DskipTests
   artifacts:
