--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ build:
   stage: build
   tags:
     - build
-  image: maven:eclipse-temurin:22-jdk
+  image:  maven:3.9.6-eclipse-temurin-22
   script:
     - mvn clean package -DskipTests
   artifacts:
