--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,35 +1,18 @@
-stages:
-  - build
-  - deploy
-
-variables:
-  DOCKER_DRIVER: overlay2
-
-build:
-  stage: build
-  tags:
+  stages:
     - build
-  image:  maven:3.9.6-eclipse-temurin-22
-  script:
-    - mvn clean package -DskipTests
-  artifacts:
-    paths:
-      - target/*.jar
 
-deploy:
-  stage: deploy
-  tags:
-    - deploy
-  image: docker:24.0.5-cli
-  services:
-    - docker:24.0.5-dind
-  variables:
-    DOCKER_TLS_CERTDIR: ""
-  before_script:
-    - apk add --no-cache docker-compose
-  script:
-    - docker-compose down || true
-    - docker-compose up -d --build
-    - docker-compose ps
-  only:
-    - main
+  build-image-docker:
+    stage: build
+    tags:
+      - build
+    image: docker:latest
+    services:
+      - docker:dind
+    before_script:
+      - docker info
+      - 'echo $CI_REGISTRY_PASSWORD | docker login -u $CI_REGISTRY_USER --password-stdin'
+    script:
+      - docker build -t adrianmanuel/spvending-manager:$CI_COMMIT_TAG .
+      - docker push adrianmanuel/spvending-manager:$CI_COMMIT_TAG
+    rules:
+      - if: '$CI_COMMIT_TAG != "" && $CI_COMMIT_BRANCH == "master"'
