--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,4 +15,4 @@
       - docker build -t adrianmanuel/spvending-manager:$CI_COMMIT_TAG .
       - docker push adrianmanuel/spvending-manager:$CI_COMMIT_TAG
     rules:
-      - if: '$CI_COMMIT_TAG != "" && $CI_COMMIT_BRANCH == "master"'
+      - if: '$CI_COMMIT_TAG != "" && $CI_COMMIT_BRANCH == "main"'
