--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@
       - docker:dind
     before_script:
       - docker info
-      - 'echo $CI_REGISTRY_PASSWORD | docker login -u $CI_REGISTRY_USER --password-stdin'
+      - echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
     script:
       - docker build -t adrianmanuel/spvending-manager:$CI_COMMIT_TAG .
       - docker push adrianmanuel/spvending-manager:$CI_COMMIT_TAG
