--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,5 +9,7 @@ build-image-docker:
   script:
     - docker build -t adrianmanuel/spvending-manager:$CI_COMMIT_TAG .
     - docker push adrianmanuel/spvending-manager:$CI_COMMIT_TAG
+    - echo "$DOCKERHUB_USERNAME"
+    - echo "${#DOCKERHUB_PASSWORD}"
   rules:
     - if: '$CI_COMMIT_TAG'
