--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,11 +5,9 @@ build-image-docker:
   image: docker:latest
   before_script:
     - docker info
-    - echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
+    - echo "$CI_JOB_TOKEN" | docker login -u "$CI_REGISTRY_USER" --password-stdin "$CI_REGISTRY"
   script:
-    - docker build -t adrianmanuel/spvending-manager:$CI_COMMIT_TAG .
-    - docker push adrianmanuel/spvending-manager:$CI_COMMIT_TAG
-    - echo "$DOCKERHUB_USERNAME"
-    - echo "${#DOCKERHUB_PASSWORD}"
+    - docker build -t "$CI_REGISTRY_IMAGE:$CI_COMMIT_TAG" .
+    - docker push "$CI_REGISTRY_IMAGE:$CI_COMMIT_TAG"
   rules:
     - if: '$CI_COMMIT_TAG'
