--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,7 @@ build-image-docker:
     - build
   image: docker:latest
   before_script:
+    - docker logout registry.docker.io || true
     - echo "Logging into GitLab Container Registry with CI_REGISTRY_USER"
     - docker login -u $CI_REGISTRY_USER -p $CI_JOB_TOKEN $CI_REGISTRY
   script:
