--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,8 +5,8 @@ build-image-docker:
   image: docker:latest
   before_script:
     - docker logout registry.docker.io || true
-    - echo "Logging into GitLab Container Registry with CI_REGISTRY_USER"
-    - docker login -u $CI_REGISTRY_USER -p $CI_JOB_TOKEN $CI_REGISTRY
+    - echo "Logging into GitLab Container Registry with CI_REGISTRY_USER via stdin"
+      - echo $CI_JOB_TOKEN | docker login -u $CI_REGISTRY_USER --password-stdin $CI_REGISTRY
   script:
     - docker build -t $CI_REGISTRY_IMAGE:$CI_COMMIT_TAG .
     - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_TAG
