--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ build-image-docker:
   before_script:
     - docker logout registry.docker.io || true
     - echo "Logging into GitLab Container Registry with CI_REGISTRY_USER via stdin"
-    - docker login $CI_REGISTRY -u $CI_REGISTRY_USER -p "$CI_REGISTRY_PASSWORD"
+    - docker login $CI_REGISTRY -u $CI_REGISTRY_USER --password-stdin
   script:
     - docker build -t $CI_REGISTRY_IMAGE:$CI_COMMIT_TAG .
     - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_TAG
