--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-build-image-docker:
+build-and-push-dockerhub:
   stage: build
   tags:
     - build
@@ -7,10 +7,10 @@ build-image-docker:
     - docker:dind
   before_script:
     - docker logout registry.docker.io || true
-    - echo "Logging into GitLab Container Registry with CI_REGISTRY_USER via stdin"
-    - docker login $CI_REGISTRY -u $CI_REGISTRY_USER --password-stdin
+    - echo "Logging into Docker Hub with $DOCKERHUB_USERNAME via stdin"
+    - docker login -u "$DOCKERHUB_USERNAME" --password-stdin
   script:
-    - docker build -t $CI_REGISTRY_IMAGE:$CI_COMMIT_TAG .
-    - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_TAG
+    - docker build -t "$DOCKERHUB_USERNAME/$CI_PROJECT_NAME:$CI_COMMIT_TAG" .
+    - docker push "$DOCKERHUB_USERNAME/$CI_PROJECT_NAME:$CI_COMMIT_TAG"
   rules:
     - if: '$CI_COMMIT_TAG'
