--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,16 +1,29 @@
-build-and-push-dockerhub:
+image: docker:latest
+
+services:
+  - docker:dind
+
+variables:
+  DOCKER_DRIVER: overlay2
+  DOCKER_HOST: tcp://docker:2375/
+
+stages:
+  - build
+  - deploy
+
+# Paso de construcción de la imagen Docker
+build_image:
   stage: build
-  tags:
-    - build
-  image: docker:latest
-  services:
-    - docker:dind
-  before_script:
-    - docker logout registry.docker.io || true
-    - echo "Logging into Docker Hub with $DOCKERHUB_USERNAME via stdin"
-    - echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
   script:
-    - docker build -t "$DOCKERHUB_USERNAME/$CI_PROJECT_NAME:$CI_COMMIT_TAG" .
-    - docker push "$DOCKERHUB_USERNAME/$CI_PROJECT_NAME:$CI_COMMIT_TAG"
-  rules:
-    - if: '$CI_COMMIT_TAG'
+    - docker build -t $CI_REGISTRY_IMAGE:latest .
+    - docker push $CI_REGISTRY_IMAGE:latest
+  only:
+    - main  # Puedes cambiar esto a la rama que usas para producción
+
+# Opcional: paso para limpiar imágenes antiguas o realizar otras tareas
+cleanup:
+  stage: deploy
+  script:
+    - docker image prune -f
+  only:
+    - main
