--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,6 +26,7 @@ deploy_app:
   tags:
     - deploy  # Tag del runner local
   script:
+    - $env:DOCKER_HOST = "npipe:////./pipe/docker_cli"
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
     - docker pull $IMAGE_NAME
     - docker-compose -f docker-compose.deploy.yml down
