--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,9 @@ variables:
   DOCKER_HOST: unix:///var/run/docker.sock
   IMAGE_NAME: "192.168.74.132:5050/adrian-manuel/spvending-managment"  # Nombre de la imagen en GitLab Registry
   COMPOSE_PROJECT_NAME: spvending-managment
-
+  CI_REGISTRY: "http://192.168.74.132:5050/adrian-manuel/spvending-managment"
+  CI_REGISTRY_USER: "Adrian-Manuel"
+  CI_REGISTRY_PASSWORD: "hakemoto31"
 stages:
   - build
   - deploy
@@ -27,7 +29,7 @@ deploy_app:
     - deploy  # Tag del runner local
   script:
     - $env:DOCKER_HOST = "npipe:////./pipe/docker_cli"
-    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
+    - docker login -u "$env:CI_REGISTRY_USER" -p "$env:CI_REGISTRY_PASSWORD" "$env:CI_REGISTRY"
     - docker pull $IMAGE_NAME
     - docker-compose -f docker-compose.deploy.yml down
     - docker-compose -f docker-compose.deploy.yml up -d
