--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,8 +26,8 @@ deploy_app:
     - deploy  # Tag del runner local
   script:
     - $env:DOCKER_HOST = "npipe:////./pipe/docker_cli"
-    #- docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
-    - docker pull $IMAGE_NAME
+    - docker login -u "$env:CI_REGISTRY_USER" -p "$env:CI_REGISTRY_PASSWORD" "192.168.74.132:5050"
+    - docker pull $env:IMAGE_NAME
     #- docker-compose -f docker-compose.deploy.yml down
     #- docker-compose -f docker-compose.deploy.yml up -d
   only:
