--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,7 +29,7 @@ deploy_app:
     - $env:DOCKER_HOST = "npipe:////./pipe/docker_cli"
     - docker login -u "$env:CI_REGISTRY_USER" -p "$env:CI_REGISTRY_PASSWORD" "$env:REGISTRY_URL"
     - docker pull "$env:192.168.74.132:5050/adrian-manuel/spvending-managment:latest"
-    #- docker-compose -f docker-compose.deploy.yml down
-    #- docker-compose -f docker-compose.deploy.yml up -d
+    - docker-compose -f docker-compose.deploy.yml down
+    - docker-compose -f docker-compose.deploy.yml up -d
   only:
     - main
