--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,8 +3,10 @@ image: docker:latest  # Usaremos Docker para los builds
 variables:
   DOCKER_DRIVER: overlay2
   DOCKER_HOST: unix:///var/run/docker.sock
-  IMAGE_NAME: "192.168.74.132:5050/adrian-manuel/spvending-managment:latest"  # Nombre de la imagen en GitLab Registry
-  COMPOSE_PROJECT_NAME: spvending-managment
+  IMAGE_TAG: ${CI_COMMIT_TAG:-latest}
+  IMAGE_NAME: "$REGISTRY_URL/adrian-manuel/spvending-managment:$IMAGE_TAG"
+  IMAGE_NAME_LATEST: "$REGISTRY_URL/adrian-manuel/spvending-managment:latest"
+  COMPOSE_PROJECT_NAME: "spvending-managment"
   REGISTRY_URL: "192.168.74.132:5050"
 stages:
   - build
@@ -14,22 +16,35 @@ build_image:
   stage: build
   tags:
     - build
+  rules:
+    - if: $CI_COMMIT_TAG
+  before_script:
+    - echo "=== BUILDING VERSION $IMAGE_TAG ==="
+    - docker --version
+    - docker-compose --version
   script:
-    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
-    - docker-compose -f docker-compose.yml build  # Usamos Docker Compose para construir la imagen
+    - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin $REGISTRY_URL
+    - docker-compose -f docker-compose.yml build
     - docker tag spvending-api-image $IMAGE_NAME
     - docker push $IMAGE_NAME
+    - docker tag spvending-api-image $IMAGE_NAME_LATEST;
+    - docker push $IMAGE_NAME_LATEST;
+  after_script:
+    - docker logout $REGISTRY_URL
   only:
     - main
 deploy_app:
   stage: deploy
   tags:
-    - deploy  # Tag del runner local
+    - deploy
+  needs: ["build_image"]
   script:
     - $env:DOCKER_HOST = "npipe:////./pipe/docker_engine"
     - $env:CI_REGISTRY_PASSWORD | docker login -u "$env:CI_REGISTRY_USER" --password-stdin "$env:REGISTRY_URL"
-    - docker pull "$env:IMAGE_NAME"
-    - docker-compose -f docker-compose.deploy.yml down
-    - docker-compose -f docker-compose.deploy.yml up -d
+    - docker pull "$env:IMAGE_NAME_LATEST"
+    - docker-compose -f docker-compose.deploy.yml down --remove-orphans
+    - docker-compose -f docker-compose.deploy.yml up -d --force-recreate
+    - echo "=== RUNNING CONTAINERS ==="
+    - docker ps
   only:
     - main
