--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,7 @@ build_image:
   tags:
     - build
   rules:
-    - if: $CI_COMMIT_TAG
+    - if: $CI_COMMIT_TAG && $CI_COMMIT_REF_NAME == "main"
   script:
     - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin $REGISTRY_URL
     - docker-compose -f docker-compose.yml build
@@ -27,8 +27,6 @@ build_image:
     - docker push $IMAGE_NAME_LATEST;
   after_script:
     - docker logout $REGISTRY_URL
-  only:
-    - main
 deploy_app:
   stage: deploy
   tags:
