--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,11 @@ variables:
   COMPOSE_PROJECT_NAME: "spvending-managment"
   REGISTRY_URL: "192.168.74.132:5050"
 
+
+workflow:
+  rules:
+    - if: $CI_COMMIT_TAG
+
 stages:
   - build
   - deploy
@@ -18,8 +23,9 @@ build_image:
   tags:
     - build
   rules:
-    - if: $CI_COMMIT_TAG && $CI_COMMIT_REF_NAME == "main"
+    - if: $CI_COMMIT_TAG  # Solo para tags
   script:
+    - echo "=== BUILDING VERSION $CI_COMMIT_TAG ==="
     - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin $REGISTRY_URL
     - docker-compose -f docker-compose.yml build --no-cache --pull
     - docker tag spvending-api-image $IMAGE_NAME
@@ -35,8 +41,9 @@ deploy_app:
     - deploy
   needs: ["build_image"]
   rules:
-    - if: $CI_COMMIT_TAG && $CI_COMMIT_REF_NAME == "main"
+    - if: $CI_COMMIT_TAG  # Solo para tags
   script:
+    - echo "=== DEPLOYING LATEST VERSION ==="
     - $env:DOCKER_HOST = "npipe:////./pipe/docker_engine"
     - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin "$REGISTRY_URL"
     - docker pull $IMAGE_NAME_LATEST
