--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,14 +23,14 @@ build_image:
   tags:
     - build
   rules:
-    - if: $CI_COMMIT_TAG  # Solo para tags
+    - if: $CI_COMMIT_TAG
   before_script:
     - echo "Validando nombre de imagen..."
     - echo "IMAGE_NAME:$IMAGE_NAME"
     - echo "IMAGE_NAME_LATEST:$IMAGE_NAME_LATEST"
   script:
     - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin $REGISTRY_URL
-    - docker-compose -f docker-compose.yml build --no-cache --pull
+    #- docker-compose -f docker-compose.yml build --no-cache --pull
     - docker tag spvending-api-image "$IMAGE_NAME"
     - docker push "$IMAGE_NAME"
     - docker tag spvending-api-image "$IMAGE_NAME_LATEST"
@@ -44,7 +44,7 @@ deploy_app:
     - deploy
   needs: ["build_image"]
   rules:
-    - if: $CI_COMMIT_TAG  # Solo para tags
+    - if: $CI_COMMIT_TAG
   script:
     - echo "=== DESPLEGANDO VERSIÓN ==="
     - $env:DOCKER_HOST = "npipe:////./pipe/docker_engine"
