--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,13 +1,15 @@
 image: docker:latest
 
 variables:
+  REGISTRY_URL: "192.168.74.132:5050"
   DOCKER_DRIVER: overlay2
   DOCKER_HOST: unix:///var/run/docker.sock
   IMAGE_TAG: ${CI_COMMIT_TAG:-latest}
-  IMAGE_NAME: "$REGISTRY_URL/adrian-manuel/spvending-managment${CI_COMMIT_TAG:+:$CI_COMMIT_TAG}"
+  IMAGE_NAME_BASE: "$REGISTRY_URL/adrian-manuel/spvending-managment"
+  IMAGE_NAME: "$IMAGE_NAME_BASE${CI_COMMIT_TAG:+:$CI_COMMIT_TAG}"
   IMAGE_NAME_LATEST: "$REGISTRY_URL/adrian-manuel/spvending-managment:latest"
   COMPOSE_PROJECT_NAME: "spvending-managment"
-  REGISTRY_URL: "192.168.74.132:5050"
+
 
 stages:
   - build
