--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,6 @@ variables:
   DOCKER_HOST: unix:///var/run/docker.sock
   IMAGE_TAG: ${CI_COMMIT_TAG:-latest}
   IMAGE_NAME_BASE: "$REGISTRY_URL/adrian-manuel/spvending-managment"
-  IMAGE_NAME: "$IMAGE_NAME_BASE${CI_COMMIT_TAG:+:$CI_COMMIT_TAG}"
   IMAGE_NAME_LATEST: "$REGISTRY_URL/adrian-manuel/spvending-managment:latest"
   COMPOSE_PROJECT_NAME: "spvending-managment"
 
@@ -23,6 +22,7 @@ build_image:
     - if: $CI_COMMIT_TAG
   before_script:
     - echo "Validando nombre de imagen..."
+    - export IMAGE_NAME="$IMAGE_NAME_BASE:$CI_COMMIT_TAG"
     - echo "IMAGE_NAME:$IMAGE_NAME"
     - echo "IMAGE_NAME_LATEST:$IMAGE_NAME_LATEST"
   script:
@@ -30,6 +30,8 @@ build_image:
     - docker-compose -f docker-compose.yml build --no-cache --pull
     - docker tag spvending-api-image "$IMAGE_NAME"
     - docker push "$IMAGE_NAME"
+    - docker tag spvending-api-image "$IMAGE_NAME_LATEST"
+    - docker push "$IMAGE_NAME_LATEST"
   after_script:
     - docker logout $REGISTRY_URL
 
