--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,8 @@ image: docker:latest
 variables:
   REGISTRY_URL: "localhost:5050"
   DOCKER_DRIVER: overlay2
-  DOCKER_HOST: unix:///var/run/docker.sock
+  #DOCKER_HOST: unix:///var/run/docker.sock
+  DOCKER_HOST: "tcp://docker:2375"
   IMAGE_TAG: ${CI_COMMIT_TAG:-latest}
   IMAGE_NAME_BASE: "$REGISTRY_URL/adrian-manuel/spvending-managment"
   IMAGE_NAME_LATEST: "$REGISTRY_URL/adrian-manuel/spvending-managment:latest"
@@ -40,12 +41,15 @@ deploy_app:
   tags:
     - deploy
   needs: ["build_image"]
+  services: []
+  variables:
+    DOCKER_HOST: "unix:///var/run/docker.sock"
   rules:
     - if: $CI_COMMIT_TAG
+  before_script:
+    - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin "$REGISTRY_URL"
   script:
     - echo "=== DESPLEGANDO VERSIÓN ==="
-    - $env:DOCKER_HOST = "npipe:////./pipe/docker_engine"
-    - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin "$REGISTRY_URL"
     - docker pull "$IMAGE_NAME_LATEST"
     - docker-compose -f docker-compose.deploy.yml down --remove-orphans
     - docker-compose -f docker-compose.deploy.yml up -d --force-recreate
