--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,7 +47,7 @@ deploy_app:
   rules:
     - if: $CI_COMMIT_TAG
   before_script:
-    - apk update && apk add git
+    - apt update && apt add git
     - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin "$REGISTRY_URL"
   script:
     - echo "=== DESPLEGANDO VERSIÓN ==="
