--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ build_image:
   rules:
     - if: $CI_COMMIT_TAG
   before_script:
-    - apt update && apt add git
+    - apk update && apk add git
     - echo "Validando nombre de imagen..."
     - export IMAGE_NAME="$IMAGE_NAME_BASE:$CI_COMMIT_TAG"
     - echo "IMAGE_NAME:$IMAGE_NAME"
