--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,8 +3,8 @@ image: docker:latest
 variables:
   REGISTRY_URL: "gitlab:5050"
   DOCKER_DRIVER: overlay2
-  #DOCKER_HOST: unix:///var/run/docker.sock
-  DOCKER_HOST: "tcp://docker:2375"
+  DOCKER_HOST: unix:///var/run/docker.sock
+  #DOCKER_HOST: "tcp://docker:2375"
   IMAGE_TAG: ${CI_COMMIT_TAG:-latest}
   IMAGE_NAME_BASE: "$REGISTRY_URL/adrian-manuel/spvending-managment"
   IMAGE_NAME_LATEST: "$REGISTRY_URL/adrian-manuel/spvending-managment:latest"
