--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,59 @@
-test_repository_url:
+image: docker:latest
+
+variables:
+  REGISTRY_URL: "gitlab:5050"
+  DOCKER_DRIVER: overlay2
+  DOCKER_HOST: unix:///var/run/docker.sock
+  #DOCKER_HOST: "tcp://docker:2375"
+  IMAGE_TAG: ${CI_COMMIT_TAG:-latest}
+  IMAGE_NAME_BASE: "$REGISTRY_URL/adrian-manuel/spvending-managment"
+  IMAGE_NAME_LATEST: "$REGISTRY_URL/adrian-manuel/spvending-managment:latest"
+  COMPOSE_PROJECT_NAME: "spvending-managment"
+
+
+stages:
+  - build
+  - deploy
+
+build_image:
   stage: build
   tags:
     - build
+  rules:
+    - if: $CI_COMMIT_TAG
+  before_script:
+    - echo "Validando nombre de imagen..."
+    - export IMAGE_NAME="$IMAGE_NAME_BASE:$CI_COMMIT_TAG"
+    - echo "IMAGE_NAME:$IMAGE_NAME"
+    - echo "IMAGE_NAME_LATEST:$IMAGE_NAME_LATEST"
   script:
-    - echo "URL del repositorio:$CI_REPOSITORY_URL"
+    - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin $REGISTRY_URL
+    - docker-compose -f docker-compose.yml build --no-cache --pull
+    - docker tag spvending-api-image "$IMAGE_NAME"
+    - docker push "$IMAGE_NAME"
+    - docker tag spvending-api-image "$IMAGE_NAME_LATEST"
+    - docker push "$IMAGE_NAME_LATEST"
+  after_script:
+    - docker logout $REGISTRY_URL
+
+deploy_app:
+  stage: deploy
+  tags:
+    - deploy
+  needs: ["build_image"]
+  services: []
+  variables:
+    DOCKER_HOST: "unix:///var/run/docker.sock"
+  rules:
+    - if: $CI_COMMIT_TAG
+  before_script:
+    - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin "$REGISTRY_URL"
+  script:
+    - echo "=== DESPLEGANDO VERSIÓN ==="
+    - docker pull "$IMAGE_NAME_LATEST"
+    - docker-compose -f docker-compose.deploy.yml down --remove-orphans
+    - docker-compose -f docker-compose.deploy.yml up -d --force-recreate
+    - echo "=== CONTENEDORES EN EJECUCIÓN ==="
+    - docker ps --format "table {{.ID}}\t{{.Names}}\t{{.Status}}\t{{.Ports}}"
+  after_script:
+    - docker logout $REGISTRY_URL
