--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,8 +12,28 @@ variables:
 
 
 stages:
+  - sonarqube
   - build
   - deploy
+
+sonarqube:
+  image: sonarsource/sonar-scanner-cli:latest
+  stage: sonarqube
+  entrypoint: ["sonar-scanner"]
+  tags:
+    - sonar
+  variables:
+    SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"
+    GIT_DEPTH: "0"
+  cache:
+    key: "${CI_JOB_NAME}"
+    paths:
+      - .sonar/cache
+  script:
+    - sonar-scanner
+  allow_failure: true
+  only:
+    - main
 
 build_image:
   stage: build
