--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,5 @@
 sonar.projectKey=Adrian-Manuel_spvending-managment_bcaafc16-d48c-4dc6-94b0-0ab5a51c5f4f
 sonar.projectName=spvending-manager
+sonar.sourceEncoding=UTF-8
+sonar.sources=src/main/java
 sonar.qualityGate.wait=true
-sonar.token=sqp_e9a9e558d83de37587a422bdea5a6e607c88a259
