--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,7 +35,8 @@ sonarqube:
     - sonar-scanner \
         -Dsonar.host.url=${SONAR_HOST_URL} \
         -Dsonar.login=${SONAR_TOKEN} \
-        -Dsonar.projectVersion=${CI_COMMIT_TAG}
+        -Dsonar.projectVersion=${CI_COMMIT_TAG} \
+        -X
   allow_failure: true
   only:
     - main
