prueba de ci cd

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,9 +32,10 @@ sonarqube:
       - .sonar/cache
   script:
     - echo "Iniciando análisis con SonarQube..."
-    - sonar-scanner -X \
-        -Dsonar.host.url=${SONAR_HOST_URL} \
-        -Dsonar.login=${SONAR_TOKEN} \
+    - > 
+        sonar-scanner -X
+        -Dsonar.host.url=${SONAR_HOST_URL}
+        -Dsonar.login=${SONAR_TOKEN}
         -Dsonar.projectVersion=${CI_COMMIT_TAG}
   allow_failure: true
   only:
