prueba de ci cd

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,4 +2,6 @@ sonar.projectKey=Adrian-Manuel_spvending-managment_bcaafc16-d48c-4dc6-94b0-0ab5a
 sonar.projectName=spvending-manager
 sonar.sourceEncoding=UTF-8
 sonar.sources=src/main/java
+sonar.tests=src/test/java
+sonar.java.binaries=target/classes
 sonar.qualityGate.wait=true
