--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,6 @@ variables:
   REGISTRY_URL: "localhost:5050"
   DOCKER_DRIVER: overlay2
   DOCKER_HOST: unix:///var/run/docker.sock
-  #DOCKER_HOST: "tcp://docker:2375"
   IMAGE_TAG: ${CI_COMMIT_TAG:-latest}
   IMAGE_NAME_BASE: "$REGISTRY_URL/adrian-manuel/spvending-managment"
   IMAGE_NAME_LATEST: "$REGISTRY_URL/adrian-manuel/spvending-managment:latest"
@@ -12,9 +11,8 @@ variables:
 
 
 stages:
-
-  - build
   - sonarqube
+  - build
   - deploy
 
 sonarqube:
@@ -45,6 +43,7 @@ build_image:
   stage: build
   tags:
     - build
+  needs: ["sonarqube"]
   rules:
     - if: $CI_COMMIT_TAG
   before_script:
