prueba de ci cd

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,6 +60,8 @@ build_image:
   after_script:
     - docker logout $REGISTRY_URL
   needs: ["sonarqube"]
+  only:
+    - main
 deploy_app:
   stage: deploy
   tags:
@@ -81,3 +83,5 @@ deploy_app:
     - docker ps --format "table {{.ID}}\t{{.Names}}\t{{.Status}}\t{{.Ports}}"
   after_script:
     - docker logout $REGISTRY_URL
+  only:
+    - main
