--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,9 +54,10 @@ build_image:
   script:
     - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin $REGISTRY_URL
     - docker-compose -f docker-compose.yml build --no-cache --pull
+    - echo "Valor de CI_COMMIT_TAG:$CI_COMMIT_TAG"
     - docker tag spvending-api-image "$REGISTRY_URL/adrian-manuel/spvending-managment:$CI_COMMIT_TAG"
     - docker push "$REGISTRY_URL/adrian-manuel/spvending-managment:$CI_COMMIT_TAG"
-    - docker tag spvending-api-image "$IMAGE_NAME_LATEST"
+    - docker tag spvending-api-image "$REGISTRY_URL/adrian-manuel/spvending-managment:latest"
     - docker push "$IMAGE_NAME_LATEST"
   after_script:
     - docker logout $REGISTRY_URL
