--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,7 +54,7 @@ build_image:
   script:
     - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin $REGISTRY_URL
     - docker-compose -f docker-compose.yml build --no-cache --pull
-    - echo "Valor de CI_COMMIT_TAG:$CI_COMMIT_TAG"
+    - echo "Valor de CI_COMMIT_REF_NAME:$CI_COMMIT_REF_NAME"
     - docker tag spvending-api-image "$REGISTRY_URL/adrian-manuel/spvending-managment:$CI_COMMIT_TAG"
     - docker push "$REGISTRY_URL/adrian-manuel/spvending-managment:$CI_COMMIT_TAG"
     - docker tag spvending-api-image "$REGISTRY_URL/adrian-manuel/spvending-managment:latest"
