--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,9 +33,9 @@ sonarqube:
       -Dsonar.login=${SONAR_TOKEN}
       -Dsonar.projectVersion=${CI_COMMIT_TAG}
   allow_failure: true
-  only:
-    - main
-
+  rules:
+    - if: $CI_COMMIT_BRANCH == "main"
+    - if: $CI_COMMIT_TAG
 build_image:
   stage: build
   tags:
