prueba de ci cd

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,6 +38,7 @@ sonarqube:
   allow_failure: true
   rules:
     - if: $CI_COMMIT_TAG
+    - if: $CI_BRANCH_NAME == main
 
 build_image:
   stage: build
@@ -59,8 +60,7 @@ build_image:
   after_script:
     - docker logout $REGISTRY_URL
   needs: ["sonarqube"]
-  only:
-    - main
+
 deploy_app:
   stage: deploy
   tags:
