--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -57,7 +57,8 @@ build_image:
     - docker logout $REGISTRY_URL
   rules:
     - if: $CI_COMMIT_TAG
-    - if: $CI_BRANCH_NAME == main
+    - if: $CI_COMMIT_BRANCH == "main"
+
 
 deploy_app:
   stage: deploy
