prueba de ci cd

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,4 +5,4 @@ sonar.sources=src/main/java
 sonar.tests=src/test/java
 sonar.java.binaries=target/classes
 sonar.qualityGate.wait=true
-sonar.host.url=https://sonarqube:9000
+sonar.host.url=http://sonarqube:9000
