prueba de ci cd

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,3 +6,4 @@ sonar.tests=src/test/java
 sonar.java.binaries=target/classes
 sonar.qualityGate.wait=true
 sonar.host.url=http://sonarqube:9000
+sonar.token=sqp_e9a9e558d83de37587a422bdea5a6e607c88a259
